--- a/src/main/webapp/partials/course.html
+++ b/src/main/webapp/partials/course.html
@@ -51,7 +51,13 @@
                     </div>
                     <div ng-if="isSet(2)">
                         <h2>Taiga Data</h2>
-                        <br>
+                        <br><br>
+                        <h3>BV Burndown</h3><br>
+                        <div ng-app="canvasjs" ng-controller="chartController">
+                            <div id="chartContainer" style="height: 360px; width: 100%;"></div>
+                        </div>
+                        <br><br>
+
                         <h3>Average Task Totals</h3><br>
                         <label style="color: black">Select Start Date: </label>
                         <select class="select_style"  ng-model="SelectedWeekBeginning" ng-options="x.weekBeginning for x in courseIntervals"
