--- a/src/main/webapp/partials/create_admins.html
+++ b/src/main/webapp/partials/create_admins.html
@@ -9,7 +9,7 @@
                             <a href="#/create_course" access="super_user" ng-click="setTab(1)">Course</a>
                         </li>
                         <li ng-class="{ active: isSet(2) }">
-                            <a href="#/create_admins" access="super_user" ng-click="setTab(2)">Admins</a>
+                            <a href="#/create_admins" access="super_user" ng-click="setTab(2)">Professors</a>
                         </li>
                         <li >
                             <a href="#/create_teams" access="super_user" ng-click="setTab(3)">Teams</a>
@@ -36,7 +36,7 @@
                                     <thead>
                                         <tr>
                                             <th colspan="3">
-                                                <div class="pull-left">Select Admin or add new Admin</div>
+                                                <div class="pull-left">Select Professor or add new Professor</div>
                                             </th>
                                         </tr>
                                         <tr>
@@ -58,7 +58,7 @@
                         <div class="container" style="max-width:600px;margin:60px auto;">
                             <form role="form">
                                 <div class="form-group">
-                                    <label>Admin Name</label>
+                                    <label>Professor Name</label>
                                     <input type="text" class="form-control" ng-model="enteredName" placeholder="Enter name" ng-required="true">
                                 </div>
                                 <div class="form-group">
@@ -78,17 +78,17 @@
                 <div class="col-md-1 pull-right">
                     <ul class="nav navbar-nav navbar-right nav-stacked">
                         <div>
-                            <button ng-click="removeAdmin()" class="btn btn-primary">Remove Admin</button>
+                            <button ng-click="removeAdmin()" class="btn btn-primary">Remove Professor</button>
                         </div>
                         <div>
-                            <button ng-click="editAdmin()" class="btn btn-primary">Edit Admin</button>
+                            <button ng-click="editAdmin()" class="btn btn-primary">Edit Professor</button>
                         </div>
                         <div>
-                            <button ng-click="saveAdmin()" class="btn btn-primary">Save Admin</button>
+                            <button ng-click="saveAdmin()" class="btn btn-primary">Save Professor</button>
                         </div>
                         <br>
                         <div>
-                            <label class="btn btn-primary">Admins CSV Upload
+                            <label class="btn btn-primary">Professors CSV Upload
                                 <input type="file" name="file" onchange="angular.element(this).scope().handleFiles(this.files)" accept=".csv" style="display:none">
                             </label>
                         </div>
