--- a/src/main/webapp/partials/create_channels.html
+++ b/src/main/webapp/partials/create_channels.html
@@ -9,7 +9,7 @@
                             <a href="#/create_course" access="super_user" ng-click="setTab(1)">Course</a>
                         </li>
                         <li >
-                            <a href="#/create_admins" access="super_user" ng-click="setTab(2)">Admins</a>
+                            <a href="#/create_admins" access="super_user" ng-click="setTab(2)">Professors</a>
                         </li>
                         <li >
                             <a href="#/create_teams" access="super_user" ng-click="setTab(3)">Teams</a>
