--- a/src/main/webapp/partials/create_teams.html
+++ b/src/main/webapp/partials/create_teams.html
@@ -8,7 +8,7 @@
                         <a href="#/create_course" access="super_user" ng-click="setTab(1)">Course</a>
                     </li>
                     <li >
-                        <a href="#/create_admins" access="super_user" ng-click="setTab(2)">Admins</a>
+                        <a href="#/create_admins" access="super_user" ng-click="setTab(2)">Professors</a>
                     </li>
                     <li ng-class="{ active: isSet(3) }">
                         <a href="#/create_teams" access="super_user" ng-click="setTab(3)">Teams</a>
