--- a/src/main/webapp/partials/create_teams.html
+++ b/src/main/webapp/partials/create_teams.html
@@ -94,6 +94,12 @@
                                     <span ng-show="gitHubNotVerified" class="ng-hide glyphicon glyphicon-remove" style="color:red;">Unverified</span>
                                 </div>
                                 <div class="form-group">
+                                    <input type="checkbox" ng-model="isPrivateRepo" ng-click="toggleIsPrivateRepo()"/> Private Repository?
+                                </div>
+                                <div ng-show="isPrivateRepo" class="form-group">
+                                    <label>GitHub Token</label>
+                                    <input type="text" class="form-control"ng-model="enteredGitHubToken" placeholder="Enter GitHub token" ng-required="true" ng-change="setGitHubUnverified()">
+                                <div class="form-group">
                                     <label>Slack Team Id</label>
                                     <input type="text" class="form-control"ng-model="enteredSlackTeam" placeholder="Enter Slack Team" ng-required="false">
                                 </div>
