--- a/src/main/webapp/partials/team.html
+++ b/src/main/webapp/partials/team.html
@@ -68,6 +68,12 @@
                             <nvd3 options='optionsForTaigaTeamTasks' data='dataForTaigaTeamTasks'></nvd3>
 
                             <h3>Burdown Chart</h3><br>
+                            <label style="color: black">Select Type of chart: </label>
+                            <select name="burndown" ng-model="burndownSelect">
+                                <option value="">--Select Type of burndown--</option>
+                                <option ng-repeat="option in arrlist" value="{{option.burndown}}">{{option.name}}</option>
+                            </select>
+                        </div><br /><br />
                             <label style="color: black">Select sprint: </label>
                             <select class="select_style"  ng-model="selectedSprint" ng-options="item.sprintName for item in sprints"
                                     ng-change="onSprintChange(selectedSprint)">
