--- a/src/main/webapp/partials/team.html
+++ b/src/main/webapp/partials/team.html
@@ -67,7 +67,11 @@
                         <div ng-controller='TeamController'>
                             <nvd3 options='optionsForTaigaTeamTasks' data='dataForTaigaTeamTasks'></nvd3>
 
-                            <h3>Burdown Chart</h3><br>
+                            <h3>Burndown Chart</h3><br>
+                            <label style="color: black">Select chart: </label>
+                            <select class="select_style"  ng-model="selectedTaigaChart" ng-options="item for item in taigaCharts"
+                                    ng-change="onTaigaChartChange(selectedTaigaChart)">
+                            </select> <br>
                             <label style="color: black">Select sprint: </label>
                             <select class="select_style"  ng-model="selectedSprint" ng-options="item.sprintName for item in sprints"
                                     ng-change="onSprintChange(selectedSprint)">
