database change for adding custom attribute

--- a/src/main/webapp/partials/create_teams.html
+++ b/src/main/webapp/partials/create_teams.html
@@ -114,6 +114,7 @@
                                     <label>Slack Team Id</label>
                                     <input type="text" class="form-control"ng-model="enteredSlackTeam" placeholder="Enter Slack Team" ng-required="false">
                                 </div>
+                                </div>
                             </form>
                         </div>
                     </div>
