US-96-TASK-110 Controller for refreshing taiga tokens

--- a/src/main/webapp/partials/create_course.html
+++ b/src/main/webapp/partials/create_course.html
@@ -50,40 +50,44 @@
                                     </tr>
                                 </table>
                             </div>
-                        <div class="container" style="max-width:600px;margin:60px auto;">
-                            <form role="form">
-                                <div class="form-group">
-                                    <label>Course Name</label>
-                                    <input type="text" class="form-control" ng-model="enteredCourseName" placeholder="Enter course name" ng-required="true">
-                                </div>
-                                <div class="form-group">
-                                    <label>Course End Date</label>
-                                    <input min="{{minDate | date:'yyyy-MM-dd'}}" type="date" class="form-control" ng-model="enteredEndDate" ng-required="true" pattern="[0-9]{4}-[0-9]{2}-[0-9]{2}">
-                                </div>
-                                <div ng-show="!showTaigaForm" class="form-group">
-                                    <label>Taiga Token</label>
-                                    <input type="text" class="form-control" ng-model="enteredTaigaToken" placeholder="Enter Taiga token" ng-required="true">
-                                </div>
-                                <button ng-show="!showTaigaForm" ng-click="showTaigaForm = !showTaigaForm" class="btn btn-primary">Get Taiga Token</button>
-                                <div ng-show="showTaigaForm" style="padding: 10px; border: 1px solid lightgrey">
+                            <div class="container" style="max-width:600px;margin:60px auto;">
+                                <form role="form">
                                     <div class="form-group">
-                                        <label>Taiga Username</label>
-                                        <input type="text" class="form-control" ng-model="taigaUsername" placeholder="Enter Taiga Username" ng-required="true">
+                                        <label>Course Name</label>
+                                        <input type="text" class="form-control" ng-model="enteredCourseName" placeholder="Enter course name" ng-required="true">
                                     </div>
                                     <div class="form-group">
-                                        <label>Taiga Password</label>
-                                        <input type="text" class="form-control" ng-model="taigaPassword" placeholder="Enter Taiga Password" ng-required="true">
+                                        <label>Course End Date</label>
+                                        <input min="{{minDate | date:'yyyy-MM-dd'}}" type="date" class="form-control" ng-model="enteredEndDate" ng-required="true" pattern="[0-9]{4}-[0-9]{2}-[0-9]{2}">
                                     </div>
-                                    <button ng-click="getTaigaToken()" type="submit" class="btn btn-primary">Submit</button>
-                                    <button ng-click="showTaigaForm = false" type="reset" class="btn btn-primary">Cancel</button>
-                                </div>
-                                <div class="form-group">
-                                    <label>Slack Token</label>
-                                    <input type="text" class="form-control" ng-model="enteredSlackToken" placeholder="Enter Slack token">
-                                </div>
-                            </form>
+                                    <div ng-show="!showTaigaForm" class="form-group">
+                                        <label>Taiga Token</label>
+                                        <input type="text" class="form-control" ng-model="enteredTaigaToken" placeholder="Enter Taiga token" ng-required="true">
+                                    </div>
+                                    <div ng-show="!showTaigaForm" class="form-group">
+                                        <label>Taiga Refresh Token</label>
+                                        <input type="text" class="form-control" ng-model="enteredTaigaRefreshToken" placeholder="Enter Taiga refresh token" ng-required="true">
+                                    </div>
+                                    <!--                                <button ng-show="!showTaigaForm" ng-click="showTaigaForm = !showTaigaForm" class="btn btn-primary">Get Taiga Token</button>-->
+                                    <!--                                <div ng-show="showTaigaForm" style="padding: 10px; border: 1px solid lightgrey">-->
+                                    <!--                                    <div class="form-group">-->
+                                    <!--                                        <label>Taiga Username</label>-->
+                                    <!--                                        <input type="text" class="form-control" ng-model="taigaUsername" placeholder="Enter Taiga Username" ng-required="true">-->
+                                    <!--                                    </div>-->
+                                    <!--                                    <div class="form-group">-->
+                                    <!--                                        <label>Taiga Password</label>-->
+                                    <!--                                        <input type="text" class="form-control" ng-model="taigaPassword" placeholder="Enter Taiga Password" ng-required="true">-->
+                                    <!--                                    </div>-->
+                                    <!--                                    <button ng-click="getTaigaToken()" type="submit" class="btn btn-primary">Submit</button>-->
+                                    <!--                                    <button ng-click="showTaigaForm = false" type="reset" class="btn btn-primary">Cancel</button>-->
+                                    <!--                                </div>-->
+                                    <div class="form-group">
+                                        <label>Slack Token</label>
+                                        <input type="text" class="form-control" ng-model="enteredSlackToken" placeholder="Enter Slack token">
+                                    </div>
+                                </form>
+                            </div>
                         </div>
-                    </div>
                     </div>
                 </div>
                 <div class="col-md-1 pull-right">
