--- a/src/main/webapp/partials/create_course.html
+++ b/src/main/webapp/partials/create_course.html
@@ -114,13 +114,13 @@
                             <button ng-click="localGet()" class="btn btn-primary">Get Stored Course</button>
                         </div>
                         <br>
-                        <label>JSON Storage</label>
+                        <label>JSON/CSV Storage</label>
                         <div>
                             <button ng-click="saveJSON()" class="btn btn-primary">Save Course File</button>
                         </div>
                         <div>
                             <label class="btn btn-primary">Upload Course File
-                                <input type="file" name="file" onchange="angular.element(this).scope().handleFiles(this.files)" accept=".json" style="display:none">
+                                <input type="file" name="file" onchange="angular.element(this).scope().handleFiles(this.files)" accept=".csv, .json" style="display:none">
                             </label>
                         </div>
                     </ul>
