--- a/src/main/webapp/resources/css/main.css
+++ b/src/main/webapp/resources/css/main.css
@@ -168,4 +168,37 @@
     height: 400px;
     width: 300px;
 }
+.modal {
+  display: none; /* Hidden by default */
+  position: absolute; /* Stay in place */
+  max-width:600px;
+    margin:60px;
+    overflow: auto;
+    border-radius: 5px 4px 4px 5px/5px 5px 4px 4px;
+  background-color: rgb(0,0,0); /* Fallback color */
+  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+}
 
+/* Modal Content/Box */
+.modal-content {
+  background-color: #fefefe;
+  max-width:600px;
+  margin:60px;
+  overflow: auto;
+  border-radius: 5px 4px 4px 5px/5px 5px 4px 4px;
+}
+
+/* The Close Button */
+.close {
+  color: #aaa;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+  color: black;
+  text-decoration: none;
+  cursor: pointer;
+}
