US-121-Task-130 api call for fetching professor

--- a/src/main/webapp/partials/create_course.html
+++ b/src/main/webapp/partials/create_course.html
@@ -124,7 +124,7 @@
                             </label>
                         </div>
                         <div>
-                            <button class="btn btn-primary" ng-click="openModal('myModal')">Open Modal</button>
+                            <button class="btn btn-primary" ng-click="openModal('myModal')">Import from canvas</button>
                         </div>
                     </ul>
                 </div>
