--- a/src/main/webapp/partials/create_teams.html
+++ b/src/main/webapp/partials/create_teams.html
@@ -138,6 +138,9 @@
                             <input type="file" name="file" onchange="angular.element(this).scope().handleFiles(this.files)" accept=".csv" style="display:none">
                         </label>
                     </div>
+                    <div>
+                        <button ng-click="fetchTeamCanvas()" class="btn btn-primary">Import from canvas</button>
+                    </div>
                 </ul>
             </div>
         </div>
