US-121-Task-134 create function for fetching student names using team id from canvas

--- a/src/main/webapp/partials/create_admins.html
+++ b/src/main/webapp/partials/create_admins.html
@@ -92,7 +92,7 @@
                                 <input type="file" name="file" onchange="angular.element(this).scope().handleFiles(this.files)" accept=".csv" style="display:none">
                             </label>
                         </div>
-                        <div>
+                        <div  id="adminCanvasBtn">
                             <button ng-click="fetchAdminCanvas()" class="btn btn-primary">Import from canvas</button>
                         </div>
                         <br>
