--- a/src/main/webapp/partials/create_teams.html
+++ b/src/main/webapp/partials/create_teams.html
@@ -139,7 +139,7 @@
                         </label>
                     </div>
                     <div>
-                        <button ng-click="fetchTeamCanvas()" class="btn btn-primary">Import team from canvas</button>
+                        <button ng-click="fetchTeamCanvas()" class="btn btn-primary" id = "teamCanvasBtn">Import team from canvas</button>
                     </div>
                 </ul>
             </div>
