readme.md updated

--- a/src/main/webapp/partials/create_course.html
+++ b/src/main/webapp/partials/create_course.html
@@ -139,7 +139,7 @@
                     <h2>Canvas Access Token</h2>
                 </div>
                 <div class="modal-body">
-                    <input type="text" class="form-control" ng-model="enteredCanvasToken" placeholder="Enter Slack token">
+                    <input type="text" class="form-control" ng-model="enteredCanvasToken" placeholder="Enter canvas token">
                 </div>
                 <div class="modal-footer">
                     <button ng-click = "fetchCourseCanvas()" class="btn btn-primary">Submit</button>
